--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
         <item>Ср</item>
         <item>Чт</item>
         <item>Пт</item>
+        <item>Сб</item>
     </string-array>
 </resources>
